[package]
name = "nebula-worker-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Core-flavor worker binary — statically links the first-party core plugin and runs the durable claim-loop over SQLite job-dispatch (ADR-0095 D1). Note: node-result and checkpoint stores are in-process (per-execution lifetime); durability lives in the SQLite execution-state row."

[[bin]]
name = "nebula-worker"
path = "src/main.rs"

[dependencies]
# Generic worker runtime — the claim-loop over the job-dispatch queue.
nebula-worker = { path = "../../crates/worker" }
# Engine wiring (with_plugin) and ActionRuntime construction.
nebula-engine = { path = "../../crates/engine" }
# ActionResult type used in the no-op ActionExecutor closure.
nebula-action = { path = "../../crates/action" }
# First-party core plugin (SetFields and other utility actions).
nebula-plugin-core = { path = "../../crates/plugin-core" }
# ResolvedPlugin::from wraps the concrete plugin for the engine.
nebula-plugin = { path = "../../crates/plugin" }
# SQLite-backed stores (ExecutionStore, WorkflowVersionStore, JobDispatchQueue).
# The `postgres` feature (below) adds `nebula-storage/postgres` at feature-selection time,
# which transitively enables `sqlx/postgres` + `sqlx/tls-rustls-ring-native-roots` in the
# workspace crate so `compose_main.rs` can use `sqlx::postgres::PgPoolOptions` without
# declaring those features directly here.
nebula-storage = { path = "../../crates/storage", features = ["sqlite"] }
# Metrics registry shared across ActionRuntime and WorkerRuntime.
nebula-metrics = { path = "../../crates/metrics" }
# JobDispatchQueue trait used in build_core_flavor_runtime signature.
nebula-storage-port = { path = "../../crates/storage-port" }

# sqlx for SqlitePool construction; features forwarded to match nebula-storage/sqlite.
# The postgres driver features come transitively via nebula-storage/postgres (activated
# by the `postgres` cargo feature below) — no separate entry needed.
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
# Random v4 UUID for ephemeral processor-id generation when NEBULA_WORKER_PROCESSOR_ID is unset.
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }

[features]
# Opt-in Postgres backend. When this feature is enabled:
#   - `nebula-storage/postgres` is activated, which transitively enables
#     `sqlx/postgres` + `sqlx/tls-rustls-ring-native-roots`.
#   - `compose_main::build_pg_stores` is compiled and reachable.
#   - Setting `NEBULA_WORKER_DATABASE_URL` will use the Postgres path.
#
# Without this feature, setting `NEBULA_WORKER_DATABASE_URL` causes a
# fail-closed startup error rather than a silent SQLite fallback.
postgres = ["nebula-storage/postgres"]

[dev-dependencies]
# In-memory adapters for the smoke test (avoids SQLite file I/O in tests).
nebula-storage = { path = "../../crates/storage" }
nebula-execution = { path = "../../crates/execution" }
nebula-workflow = { path = "../../crates/workflow" }
nebula-core = { path = "../../crates/core" }
nebula-storage-port = { path = "../../crates/storage-port" }

serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "test-util"] }
chrono = { workspace = true }

[lints]
workspace = true
