[package]
name = "nebula-action"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
nebula-action-macros = { path = "macros" }
nebula-core = { path = "../core" }
nebula-credential = { path = "../credential" }
nebula-error = { workspace = true }
nebula-parameter = { path = "../parameter" }
nebula-resource = { path = "../resource" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }

tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
nebula-core = { path = "../core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lib]
doctest = false
