[package]
name = "nebula-action"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
default = []
# Exposes the engine-level retry surface (`ActionResult::Retry`). Currently a
# planned capability without persisted attempt accounting (canon §11.2). The
# engine does not honor the variant end-to-end — enabling this flag only
# un-hides the type; it does not wire a scheduler. Do not enable in production.
unstable-retry-scheduler = []

[dependencies]
nebula-action-macros = { path = "macros" }
nebula-core = { path = "../core" }
nebula-credential = { path = "../credential" }
nebula-error = { workspace = true }
nebula-schema = { path = "../schema" }
nebula-resource = { path = "../resource" }
semver = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
zeroize = { version = "1.8.2" }

parking_lot = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
tracing = { workspace = true }

# HTTP types — WebhookRequest uses http::Method / http::HeaderMap
# so the webhook domain speaks the canonical HTTP vocabulary instead
# of its own Method/HeaderMap newtypes.
http = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }

# Crypto — webhook signature verification primitives (crates::webhook)
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
nebula-core = { path = "../core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
hex = { workspace = true }
