[package]
name = "nebula-action"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
default = []

[dependencies]
async-trait = { workspace = true }
nebula-action-macros = { path = "macros" }
nebula-core = { path = "../core" }
nebula-credential = { path = "../credential" }
nebula-error = { workspace = true }
nebula-metadata = { path = "../metadata" }
nebula-schema = { path = "../schema" }
nebula-resource = { path = "../resource" }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
zeroize = { version = "1.8.2" }

parking_lot = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
tracing = { workspace = true }

# HTTP types — WebhookRequest uses http::Method / http::HeaderMap
# so the webhook domain speaks the canonical HTTP vocabulary instead
# of its own Method/HeaderMap newtypes.
http = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }

# Crypto — webhook signature verification primitives (crates::webhook)
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
nebula-core = { path = "../core" }
nebula-credential-macros = { path = "../credential/macros" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
hex = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
# Closes Stage-4 review I3 — fixture in tests/action_attr_phantom_rewrite.rs
# wires #[capability] and #[action_phantom] together via local stand-in types.
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
serde = { workspace = true, features = ["derive"] }
trybuild = "1"

[lints]
workspace = true
