[package]
name = "nebula-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description = "Unified API server for Nebula: status and workflow endpoints"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "nebula-server"
path = "src/bin/nebula-server.rs"

[[bin]]
name = "nebula-webhook"
path = "src/bin/nebula-webhook.rs"

[[bin]]
name = "nebula-realtime"
path = "src/bin/nebula-realtime.rs"

[dependencies]
nebula-error = { workspace = true, features = ["derive"] }
nebula-storage = { path = "../storage", features = ["credential-in-memory"] }
nebula-storage-port = { path = "../storage-port" }
nebula-core = { path = "../core" }
nebula-execution = { path = "../execution" }
nebula-validator = { path = "../validator" }
nebula-metrics = { path = "../metrics" }
nebula-workflow = { path = "../workflow" }
nebula-action = { path = "../action" }
nebula-engine = { path = "../engine" }
nebula-plugin = { path = "../plugin" }
nebula-resilience = { path = "../resilience" }
nebula-credential = { path = "../credential" }
nebula-eventbus = { path = "../eventbus" }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "net",
  "signal",
  "time",
] }
axum = { workspace = true }
tower = { version = "0.5", features = ["timeout", "util", "limit", "load-shed"] }
tower-http = { workspace = true, features = [
  "trace",
  "cors",
  "compression-full",
  "limit",
  "timeout",
  "catch-panic",
  "set-header",
] }
governor = { version = "0.10", default-features = false, features = ["std", "dashmap"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
jsonwebtoken = { workspace = true }
futures = "0.3"
rand = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls",
  "form",
  "stream",
] }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
argon2 = { workspace = true }
totp-rs = { workspace = true }
parking_lot = { workspace = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
# Optional — only used by the PG-backed idempotency path in
# `examples/simple_server.rs` (gated by `feature = "postgres"`).
sqlx = { version = "0.8", optional = true, default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "tls-rustls-ring-native-roots",
] }
tokio-util = { workspace = true }

# Webhook transport
dashmap = { workspace = true }
moka = { workspace = true, features = ["future"] }
url = { workspace = true }

# OpenAPI 3.1 spec generation (ADR-0047). `utoipa-axum` ties the served
# `axum::Router` to the generated `OpenApi` value through one mounting path
# (`OpenApiRouter::routes(routes!(...))`); handlers without `#[utoipa::path]`
# cannot pass through it — drift detection is structural, not review-time.
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
nebula-api = { path = ".", features = ["test-util"] }
# Spec validation in tests — typed 3.1 parser (ADR-0047). Round-trip via
# `oas3::OpenApi::deserialize(&served_json)` is hermetic, no fixture management.
oas3 = { workspace = true }
# Dev-only: the knife integration test wires the A2 consumer + engine
# end-to-end alongside the API producer (see `tests/knife.rs`). Listed in
# `deny.toml` wrappers for the same reason. `InProcessSandbox` is re-exported
# through `nebula-engine` so we don't need a direct `nebula-sandbox` dep.
nebula-engine = { path = "../engine" }
nebula-schema = { path = "../schema" }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
insta = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
wiremock = { workspace = true }
# Dev-only: `tests/wiremock_smoke.rs` — HTTP client + mock server (no full `App` required).
reqwest = { workspace = true, default-features = false, features = ["json", "rustls"] }
serde_json = { workspace = true }

[features]
default = []
# Enables `ApiConfig::for_test()` and other test helpers. NEVER
# enable this in production builds — it exposes a constructor that
# bypasses the JwtSecret validation gate.
test-util = []
# Enables the PG-backed idempotency-store path in `examples/simple_server.rs`
# (M3.4 / ADR-0048). Forwards to `nebula-storage/postgres` so the
# `PgIdempotencyStore` impl + sqlx pool become available. When this feature
# is OFF, setting `API_IDEMPOTENCY_BACKEND=postgres` fails closed at
# startup (per ADR-0048 fail-closed contract).
postgres = ["nebula-storage/postgres", "dep:sqlx"]
# Note: `credential-oauth` rollout feature gate deleted 2026-04-24 —
# OAuth ceremony deps (nebula-credential, reqwest, hmac, sha2, zeroize)
# are now unconditional base deps per ADR-0031 §6 (rollout window closed).

[lints]
workspace = true
