[package]
name = "nebula-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nebula desktop application (GPUI)"

[[bin]]
name = "nebula"
path = "src/main.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5"
gpui-navigator = "0.1"

anyhow = { workspace = true }
nebula-resource = { path = "../resource" }
once_cell = { workspace = true }
