[package]
name = "nebula-auth"
version.workspace = true
edition.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core types (IDs, keys, scopes)
nebula-core = { path = "../core" }

# Parameter definitions (Schema, FieldValues)
nebula-parameter = { path = "../parameter" }

# Errors
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Security
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

# Utilities
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
