[package]
name = "nebula-auth"
version.workspace = true
edition.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Security
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

# Utilities
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
