[package]
name = "nebula-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[features]
default = ["json", "toml", "yaml", "env"]
json = []
toml = ["dep:toml"]
yaml = ["dep:yaml-rust2"]
env = []

[dependencies]
# Async and concurrency
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# Errors
thiserror = { workspace = true }

# Format parsers
toml = { version = "0.9.7", optional = true }
yaml-rust2 = { version = "0.9", optional = true }

# Notifications
notify = { version = "8.2.0" }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true }
dashmap = { workspace = true }

# Internal crates
nebula-log = { path = "../log" }
nebula-validator = { path = "../validator" }
