[package]
name = "nebula-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[features]
default = ["toml", "env"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
env = []

[dependencies]
# Async and concurrency
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# Errors
nebula-error = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

# Format parsers
toml = { version = "1.1", optional = true }
serde_yaml = { version = "0.9", optional = true }

# Notifications
notify = { version = "8.2.0" }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true }
dashmap = { workspace = true }

# Internal crates
nebula-config-macros = { path = "macros" }
nebula-log = { path = "../log" }
nebula-validator = { path = "../validator" }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
