[package]
name = "nebula-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types and traits for the Nebula workflow engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
domain-key = { workspace = true }
nebula-error = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }

[[bench]]
name = "id_parse_serialize"
harness = false
