[package]
name = "nebula-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types and traits for the Nebula workflow engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
domain-key = { workspace = true }
nebula-error = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "id_parse_serialize"
harness = false

[lints]
workspace = true
